--- a/restaurant.html
+++ b/restaurant.html
@@ -25,7 +25,7 @@
                 </h1>
             </nav>
             <!-- Beginning breadcrumb -->
-            <ul id="breadcrumb">
+            <ul id="breadcrumb" role="navigation" aria-label="Breadcrumb">
                 <li class="breadcrumb-item">
                     <a href="/" class="breadcrumb-link">Home</a>
                 </li>
@@ -39,12 +39,12 @@
         <main id="maincontent" class="restaurant-info">
             <!-- Beginning map -->
             <section id="map-container">
-                <div id="map"></div>
+                <div id="map" role="application" aria-label="Map of Restaurants"></div>
             </section>
             <!-- End map -->
             <!-- Beginning restaurant -->
             <section id="restaurant-container">
-                <h1 id="restaurant-name"></h1>
+                <h2 id="restaurant-name"></h2>
                 <img id="restaurant-img">
                 <p id="restaurant-cuisine"></p>
                 <address id="restaurant-address"></address>
@@ -72,8 +72,6 @@
         <script type="text/javascript" src="js/dbhelper.js"></script>
         <!-- Main javascript file -->
         <script type="text/javascript" src="js/restaurant_info.js"></script>
-        <!-- Google Maps -->
-        <!--  <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA_tKbW6A5pQ-eupxI56myUnHLqYCzOjKo&libraries=places&callback=initMap"></script> -->
         <!-- End scripts -->
 
     </body>
